--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,9 +47,10 @@ services:
     ports:
       - "1112:5432"
     volumes:
-      - postgres_product_data:/var/lib/postgresql/data
+      - postgres_euser_data:/var/lib/postgresql/data
+
 volumes:
   postgres_inventory_data:
   postgres_order_data:
   postgres_product_data:
-  postgres_euser:
+  postgres_euser_data:
