--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:1112/user-db
+    url: jdbc:postgresql://localhost:5432/product-db
     username: postgres
     password: 1234
     driver-class-name: org.postgresql.Driver
