Expaned inventory service, refactored the code, fixed bugs and unit tested the service

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -8,12 +8,12 @@ spring:
         - id: user-service
           uri: lb://user-service
           predicates:
-            - Path=/api/v1/users
+            - Path=/api/v1/users/**
         # inventory-service
         - id: inventory-service
           uri: lb://inventory-service
           predicates:
-            - Path=/api/v1/inventory/products
+            - Path=/api/v1/inventory/**
 
 eureka:
   client:
